Book covers are now displayed how it should (in terms of hackathon) https://github.com/oSoc15/bibnet/issues/2

--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -263,8 +263,10 @@ $thin-font: 100;
 }
 
 .detail .bookcover img {
-    height: 655px;
+    height: 805px;
+    min-width: 100%;
     width: auto;
+    border-radius: $border-radius;
 }
 
 .detail h1 {
@@ -309,4 +311,17 @@ $thin-font: 100;
 }
 .button.no {
     float: right !important;
+}
+
+.suggestion {
+    .book {
+        height: 390px;
+        overflow: hidden;
+
+        img {
+            min-height: 100%;
+            min-width: 100%;
+            max-height: auto;
+        }
+    }
 }
